jupyter-js-widgets/css/widgets-base.css
/* ... */
.widget-hbox .widget-readout {
    /* Horizontal Readout */
    text-align: center;
    max-width: var(--jp-widgets-inline-width-short);
    min-width: var(--jp-widgets-inline-width-tiny);
    margin-left: var(--jp-widgets-inline-margin);
}

.widget-vbox .widget-readout {
    /* Vertical Readout */
    margin-top: var(--jp-widgets-inline-margin);
}

/* Widget Checkbox Styling */

.widget-checkbox {
    width: var(--jp-widgets-inline-width-short);
    height: var(--jp-widgets-inline-height);
    line-height: var(--jp-widgets-inline-height);
    justify-content: space-between;
}

.widget-checkbox input[type="checkbox"] {
    margin: 0px var(--jp-widgets-inline-margin) 0px var(--jp-widgets-inline-margin);
    height: var(--jp-widgets-inline-height);
    line-height: var(--jp-widgets-inline-height);
    font-size: large;
    flex-grow: 1;
    align-self: center;
}

/* Widget Valid Styling */

.widget-valid {
    height: var(--jp-widgets-inline-height);
    line-height: var(--jp-widgets-inline-height);
    width: var(--jp-widgets-inline-width-short);
    font-size: var(--jp-widgets-font-size);
}

.widget-valid i:before {
    height: var(--jp-widgets-inline-height);
    line-height: var(--jp-widgets-inline-height);
    margin-right: var(--jp-widgets-inline-margin);
    margin-left: var(--jp-widgets-inline-margin);

    /* from the fa class in FontAwesome: https://github.com/FortAwesome/Font-Awesome/blob/49100c7c3a7b58d50baa71efef11af41a66b03d3/css/font-awesome.css#L14 */
    display: inline-block;
    font: normal normal normal 14px/1 FontAwesome;
    font-size: inherit;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.widget-valid.mod-valid i:before {
    content: "\f00c";
    color: green;
}

.widget-valid.mod-invalid i:before {
    content: "\f00d";
    color: red;
}

/* Widget Text and TextArea Stying */

.widget-text {
    /* Textbox */
    width: var(--jp-widgets-inline-width);
    height: var(--jp-widgets-inline-height);
    line-height: var(--jp-widgets-inline-height);
}

.widget-textarea {
    width: var(--jp-widgets-inline-width);
    line-height: var(--jp-widgets-inline-height);
}

.widget-text input[type="text"], .widget-textarea textarea {
    border: var(--jp-border-width) solid var(--jp-border-color1);
    background-color: var(--jp-layout-color1);
    color: var(--jp-ui-font-color1);
    font-size: var(--jp-widgets-font-size);
    padding: var(--jp-widgets-input-padding);
}

.widget-text input:focus, .widget-textarea textarea:focus {
    -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2),
                        0 3px 1px -2px rgba(0, 0, 0, 0.14),
                        0 1px 5px 0 rgba(0, 0, 0, 0.12);

    -moz-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2),
                     0 3px 1px -2px rgba(0, 0, 0, 0.14),
                     0 1px 5px 0 rgba(0, 0, 0, 0.12);

    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2),
                0 3px 1px -2px rgba(0, 0, 0, 0.14),
                0 1px 5px 0 rgba(0, 0, 0, 0.12);
}

/* Widget Slider */

.widget-slider .ui-slider {
    /* Slider Track */
    border: var(--jp-widgets-slider-border-width) solid var(--jp-border-color2);
    background: var(--jp-layout-color1);
    box-sizing: border-box;
    position: relative;
}

.widget-slider .ui-slider-handle {
    /* Slider Handle */
    outline: none !important; /* focused slider handles are colored - see below */
    position: absolute;
    background-color: var(--jp-layout-color2);
    border: var(--jp-widgets-slider-border-width) solid var(--jp-border-color2);
    box-sizing: border-box;
    z-index: 1;
    background-image: none; /* Override jquery-ui */
}

/* Override jquery-ui */
.widget-slider .ui-slider-handle:hover {
    background-color: var(--jp-layout-color1);
    border: var(--jp-widgets-slider-border-width) solid var(--jp-border-color1);
}

.widget-slider .ui-slider-handle:focus {
    background-color: var(--jp-widgets-slider-active-handle-background);
    border-color: var(--jp-border-color1);
    z-index: 2;
}

.widget-slider .ui-slider-range {
    /* Interval between the two specified value of a double slider */
    position: absolute;
    background: var(--jp-layout-color3);
    z-index: 0;
}

/* Shapes of Slider Handles */

.widget-hslider .ui-slider-handle {
    width: var(--jp-widgets-slider-handle-thickness);
    height: var(--jp-widgets-slider-handle-size);
    margin-top: calc((var(--jp-widgets-slider-track-thickness) - var(--jp-widgets-slider-handle-size)) / 2 - var(--jp-widgets-slider-border-width));
    margin-left: calc(var(--jp-widgets-slider-handle-thickness) / -2 + var(--jp-widgets-slider-border-width));
    top: 0;
}

.widget-vslider .ui-slider-handle {
    width: var(--jp-widgets-slider-handle-size);
    height: var(--jp-widgets-slider-handle-thickness);
    margin-bottom: calc(var(--jp-widgets-slider-handle-thickness) / -2 + var(--jp-widgets-slider-border-width));
    margin-left: calc((var(--jp-widgets-slider-track-thickness) - var(--jp-widgets-slider-handle-size)) / 2 - var(--jp-widgets-slider-border-width));
    left: 0;
}

.widget-hslider .ui-slider-range {
    height: calc(var(--jp-widgets-slider-track-thickness) * 2);
    margin-top: calc((var(--jp-widgets-slider-track-thickness) - var(--jp-widgets-slider-track-thickness) * 2) / 2 - var(--jp-widgets-slider-border-width));
}

.widget-vslider .ui-slider-range {
    width: calc(var(--jp-widgets-slider-track-thickness) * 2);
    margin-left: calc((var(--jp-widgets-slider-track-thickness) - var(--jp-widgets-slider-track-thickness) * 2) / 2 - var(--jp-widgets-slider-border-width));
}

/* Horizontal Slider */

.widget-hslider {
    width: var(--jp-widgets-inline-width);
    height: var(--jp-widgets-inline-height);
    line-height: var(--jp-widgets-inline-height);
}

.widgets-slider .slider-container {
    overflow: visible;
}
/* ... */

